# dart_escpos_printer

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/dart_escpos_printer_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: dart_escpos_printer.podspec
lib/: dart_escpos_printer.dart  dart_escpos_printer_bindings_generated.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/api/: hello.dart  printer.dart
linux/: CMakeLists.txt
macos/: dart_escpos_printer.podspec
macos/Classes/: dart_escpos_printer.c
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: hello.rs  mod.rs  printer.rs
src/: CMakeLists.txt  dart_escpos_printer.c
windows/: CMakeLists.txt
